2008-11-18  Per Bothner  <per@bothner.com>

	* inlining-test.scm (varargs1, varargs2, vararg3): New test functions.
	* Makefile.am, inlining.expected: Update to test length of new methods.

2008-07-17  Per Bothner  <per@bothner.com>

	* num-test.scm: Add tests for R6RS bitwise- operations.

2008-06-08  Per Bothner  <per@bothner.com>

	* moduleFT.scm: Fix so we don't do set-car! on literal lists.

2008-05-31  Per Bothner  <per@bothner.com>

	* module2.scm, obj-test.scm: Language.getTypeFor no longer maps
	java.lang.String to the toStringType <String>, which mean's we'd get
	an error casting SimpleSymbol to j.l.String, unless we fix the test.

2008-05-20  Per Bothner  <per@bothner.com>

	* misc-test.scm: Test map over ElementType.

2008-04-30  Per Bothner  <per@bothner.com>

	* scribble.scm: Simplify to make use of new syntax etc.

2008-02-27  Per Bothner  <per@bothner.com>
	    Yaroslav Kavenchuk <kavenchuk@jenty.by>

	* misc-test.scm: New test-case based on Bug reported using
	non-implementattion array-type <integer[]>.

2007-06-10  Helge Dietert

	* num-test.scm: add test for Savannah bug# 20123
	"Can't correctly divide 1307674368000/2874009600".

2007-03-01  Chris Wegrzyn <chris.wegrzyn@gmail.com>
	    Per Bothner  <per@bothner.com>

	* misc-test.scm: New test from Savannah bug #18909.

2007-02-28  Per Bothner  <per@bothner.com>
	    Thomas Kirk <tk@research.att.com>

	* misc-test.scm: New test based on on Savannah bug#18736,
	"intenal compile error -- svn rev 5816".

2007-02-27  Per Bothner  <per@bothner.com>

	* inlining-test.scm (is-pair13, is-pair14, is-pair15, is-pair16,
	factorialI1): New functions.
	* Makefile.am (inlining.log): Also check new functions.
	* inlining.expected: Update accordingly.

2007-02-23  Per Bothner  <per@bothner.com>

	* inlining-test.scm (factoriali1, factoriali2, factoriall1,
	factorialI1): New functions.
	* Makefile.am (inlining.log): Also check most of the new functions.
	* inlining.expected: Update.
